[package]
name = "Halo2_test"
version = "0.1.0"
edition = "2024"

[dependencies]
pasta_curves = "0.5.0"
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
# Versione corretta per plotters 0.3.7
plotters = { version = "0.3.7", default-features = false, features = ["all_elements", "all_series", "bitmap_backend", "bitmap_encoder", "bitmap_gif", "ttf"] }
ff = "0.13"